Fix unredirected windows not redrawn after display resolution change

REVIEW: 109597
BUG: 305781
FIXED-IN: 4.10.2